--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,8 @@
 <body>
  <header class="header">
   <a href="#about" class="logo">
-   <img src="./Images/Rectangle 32.png" class="img-1" alt="">
-   <img src="./Images/Rectangle 33.png" alt="">
+   <img src="Rectangle 32.png" class="img-1" alt="">
+   <img src="Rectangle 33.png" alt="">
   </a>
   <nav class="navbar">
     
@@ -42,11 +42,11 @@
    <a href="#" class="btn">Learn more</a>
  </div>
  <div class="image">
-  <img src="./images/image1 1.png" alt="" />
+  <img src="image1 1.png" alt="" />
 </div>
 </section>
  <section class="sect">
-  <div class="img"><img src="./Images/image2.png" alt=""></div>
+  <div class="img"><img src="image2.png" alt=""></div>
 
 <div class="context">
   <h4>We are a high level data storage bank</h4>
@@ -60,8 +60,8 @@
    <div class="box-container">
      <div class="box">
      <div class="images">
-     <img class="img-1" src="./Images/image3 1.png" alt="">
-     <img class="img-2" src="./Images/Rectangle 39.png" alt="">
+     <img class="img-1" src="image3 1.png" alt="">
+     <img class="img-2" src="Rectangle 39.png" alt="">
      <div class="content">
       <h5>Search Data</h5>
      <h4>Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</h4>
@@ -71,8 +71,8 @@
   </div>
   <div class="box">
     <div class="images">
-    <img class="img-1" src="./Images/image4.png" alt="">
-    <img class="img-2" src="./Images/Rectangle 39 (1).png" alt="">
+    <img class="img-1" src="image4.png" alt="">
+    <img class="img-2" src="Rectangle 39 (1).png" alt="">
     <div class="content">
       <h5>24 Hours Access</h5>
           <h4>Access is given 24 hours a full morning to night and
@@ -84,8 +84,8 @@
  </div>
 <div class="box">
   <div class="images">
-  <img class="img-1" src="./Images/image6 1.png" alt="">
-  <img class="img-2" src="./Images/Rectangle 39 (3).png" alt="">
+  <img class="img-1" src="image6 1.png" alt="">
+  <img class="img-2" src="Rectangle 39 (3).png" alt="">
   <div class="content">
     <h5>Print out</h5>
          <h4> Print out service gives you convenience if someday
@@ -96,8 +96,8 @@
 </div>
 <div class="box">
   <div class="images">
-  <img class="img-1" src="./Images/image5 1.png" alt="">
-  <img class="img-2" src="./Images/Rectangle 39 (2).png" alt="">
+  <img class="img-1" src="image5 1.png" alt="">
+  <img class="img-2" src="Rectangle 39 (2).png" alt="">
   <div class="content">
     <h5>Security Code</h5>
     <h4>Data Security is one of our best facilities. Allows for your files
@@ -115,7 +115,7 @@
   </h2>
   <div class="box-container">
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -125,7 +125,7 @@
     </div>
     </div>
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -134,7 +134,7 @@
     </div>
     </div>
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="/Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -144,10 +144,10 @@
     </div>
 </div> 
 <div class="Slider">
-  <img src="./Images/Ellipse 72.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
+  <img src="Ellipse 72.png" alt="">
+  <img src="Ellipse 73.png" alt="">
+  <img src="Ellipse 73.png" alt="">
+  <img src="Ellipse 73.png" alt="">
 </div>
 <div class="arrow">
   <i class="material-icons" id="one">arrow_back</i>
@@ -166,8 +166,8 @@
  <h6>Get limited 1 week free try our features!</h6>
  <div class="nav">
    <a class="IMG" href="">
-    <img src="./Images/Rectangle 32.png" class="img-1" alt="">
-    <img src="./Images/Rectangle 33.png" alt="">
+    <img src="Rectangle 32.png" class="img-1" alt="">
+    <img src="Rectangle 33.png" alt="">
     <a href="#about">DataWare House</a>
    </a>
    <a href="#about">About</a>
