--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Save-your-storage Website</title>
- <link rel="stylesheet" href="./styles/Style.css">
+ <link rel="stylesheet" href="Style.css">
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <link
  rel="stylesheet"
@@ -17,8 +17,8 @@
 <body>
  <header class="header">
   <a href="#about" class="logo">
-   <img src="./Images/Rectangle 32.png" class="img-1" alt="">
-   <img src="./Images/Rectangle 33.png" alt="">
+   <img src="Rectangle 32.png" class="img-1" alt="">
+   <img src="Rectangle 33.png" alt="">
   </a>
   <nav class="navbar">
     
@@ -28,7 +28,7 @@
     <a href="#sign-up">Signup</a>
   </nav>
    
-   <a href="./index/demo.html" class="Request-btn">Request Demo <i class="material-icons">arrow_forward</i>
+   <a href="https://prismatic-salamander-fa19f4.netlify.app/" class="Request-btn">Request Demo <i class="material-icons">arrow_forward</i>
     </a>
     <div class="fas fa-bars create" id="menu-btn"></div>
 
@@ -43,11 +43,11 @@
    <a href="#" class="btn">Learn more</a>
  </div>
  <div class="image">
-  <img src="./images/image1 1.png" alt="" />
+  <img src="image1 1.png" alt="" />
 </div>
 </section>
  <section class="sect">
-  <div class="img"><img src="./Images/image2.png" alt=""></div>
+  <div class="img"><img src="image2.png" alt=""></div>
 
 <div class="context">
   <h4>We are a high level data storage bank</h4>
@@ -61,8 +61,8 @@
    <div class="box-container">
      <div class="box">
      <div class="images">
-     <img class="img-1" src="./Images/image3 1.png" alt="">
-     <img class="img-2" src="./Images/Rectangle 39.png" alt="">
+     <img class="img-1" src="image3 1.png" alt="">
+     <img class="img-2" src="Rectangle 39.png" alt="">
      <div class="content">
       <h5>Search Data</h5>
      <h4>Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</h4>
@@ -72,8 +72,8 @@
   </div>
   <div class="box">
     <div class="images">
-    <img class="img-1" src="./Images/image4.png" alt="">
-    <img class="img-2" src="./Images/Rectangle 39 (1).png" alt="">
+    <img class="img-1" src="image4.png" alt="">
+    <img class="img-2" src="Rectangle 39 (1).png" alt="">
     <div class="content">
       <h5>24 Hours Access</h5>
           <h4>Access is given 24 hours a full morning to night and
@@ -85,8 +85,8 @@
  </div>
 <div class="box">
   <div class="images">
-  <img class="img-1" src="./Images/image6 1.png" alt="">
-  <img class="img-2" src="./Images/Rectangle 39 (3).png" alt="">
+  <img class="img-1" src="image6 1.png" alt="">
+  <img class="img-2" src="Rectangle 39 (3).png" alt="">
   <div class="content">
     <h5>Print out</h5>
          <h4> Print out service gives you convenience if someday
@@ -97,8 +97,8 @@
 </div>
 <div class="box">
   <div class="images">
-  <img class="img-1" src="./Images/image5 1.png" alt="">
-  <img class="img-2" src="./Images/Rectangle 39 (2).png" alt="">
+  <img class="img-1" src="image5 1.png" alt="">
+  <img class="img-2" src="Rectangle 39 (2).png" alt="">
   <div class="content">
     <h5>Security Code</h5>
     <h4>Data Security is one of our best facilities. Allows for your files
@@ -116,7 +116,7 @@
   </h2>
   <div class="box-container">
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -126,7 +126,7 @@
     </div>
     </div>
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -135,7 +135,7 @@
     </div>
     </div>
   <div class="card">
-    <img src="./Images/Ellipse 76.png" alt="">
+    <img src="Ellipse 76.png" alt="">
     <div class="content">
     <h3>John Fang </h3>
     <h6>wordfaang.com</h6>
@@ -145,10 +145,10 @@
     </div>
 </div> 
 <div class="Slider">
-  <img src="./Images/Ellipse 72.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
-  <img src="./Images/Ellipse 73.png" alt="">
+  <img src="Ellipse 72.png" alt="">
+  <img src="Ellipse 73.png" alt="">
+  <img src="Ellipse 73.png" alt="">
+  <img src="Ellipse 73.png" alt="">
 </div>
 <div class="arrow">
   <i class="material-icons" id="one">arrow_back</i>
@@ -167,8 +167,8 @@
  <h6>Get limited 1 week free try our features!</h6>
  <div class="nav">
    <a class="IMG" href="">
-    <img src="./Images/Rectangle 32.png" class="img-1" alt="">
-    <img src="./Images/Rectangle 33.png" alt="">
+    <img src="Rectangle 32.png" class="img-1" alt="">
+    <img src="Rectangle 33.png" alt="">
     <a href="#about">DataWare House</a>
    </a>
    <a href="#about">About</a>
@@ -231,5 +231,5 @@
 
 </footer> 
 </body>
-<script src="./scripts/script.js"></script>
+<script src="script.js"></script>
 </html>
